# ntruth-tools

./: .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TESTS.md  OmniBox 产品需求文档.md  OmniBox 技术架构设计文档.md  PROJECT_STATUS.md  README.md  SCREENSHOT_CHANGELOG.md  SCREENSHOT_TECHNICAL_SPEC.md  SECURITY_REVIEW.md  SECURITY_SUMMARY.md  SETUP.md  TODOLIST.md  claude.md  index.html  launcher.html  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
docs/ai-context/: project-structure.md
scripts/: gen_icons_from_tools.py  gen_tray_icons.py
src/: App.tsx  App.vue  env.d.ts  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_indexer.rs  automation.rs  clipboard.rs  everything.rs  everything_service.rs  lib.rs  main.rs  ocr.rs  plugin.rs  screenshot.rs  search.rs  workflow.rs
src-tauri/src/app/: config.rs  error.rs  state.rs
src-tauri/src/commands/: ai.rs  capture.rs  clipboard.rs  mod.rs  plugin.rs  search.rs  settings.rs  system.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/core/clipboard/: filter.rs  mod.rs  monitor.rs  storage.rs  types.rs  window.rs
src-tauri/src/core/indexer/: filter.rs  mod.rs  ranker.rs  scanner.rs  trie.rs  trigram.rs  watcher.rs
src-tauri/src/core/parser/: calculator.rs  mod.rs  web_search.rs
src-tauri/src/core/plugin/: loader.rs  mod.rs  registry.rs  sandbox.rs
src-tauri/src/core/screenshot/: mod.rs
src-tauri/src/core/workflow/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: apps.rs  mod.rs
src-tauri/src/platform/windows/: apps.rs  mod.rs
src-tauri/src/storage/: cache.rs  database.rs  mod.rs
src-tauri/src/utils/: crypto.rs  image.rs  logger.rs  mod.rs
src/components/: ThemeToggle.vue
src/components/AIChatView/: AIChatView.css  AIChatView.tsx  index.ts
src/components/ActionBar/: ActionBar.tsx
src/components/CaptureToolbar/: index.tsx
src/components/ResultList/: ResultItem.tsx  ResultList.tsx  index.ts
src/components/SearchBox/: SearchInput.tsx
src/features/clipboard/: ClipboardPanel.vue  types.ts
src/features/launcher/: LauncherApp.vue  LauncherPreview.vue  search-data.ts  types.ts  useSearch.spec.ts  useSearch.ts
src/features/plugins/: PluginCenter.vue  types.ts
src/features/screenshot/: ScreenshotDock.vue
src/features/search/: FileSearchPanel.vue
src/features/workflow/: WorkflowBuilder.vue  types.ts
src/hooks/: index.ts  useDebounce.ts  useKeyboard.ts
src/launcher/: main.ts
src/pages/AI/: ChatMessage.tsx  PresetSelector.tsx  index.tsx
src/pages/Capture/: index.tsx
src/pages/Clipboard/: ClipboardItem.tsx  ClipboardPreview.tsx  index.tsx
src/pages/Main/: index.tsx
src/pages/Pin/: index.tsx
src/pages/Settings/: AISettings.tsx  About.tsx  Advanced.tsx  AlfredLayout.tsx  AlfredSettings.tsx  Appearance.tsx  Clipboard.tsx  Features.tsx  General.tsx  Indexer.tsx  Layout.tsx  PluginMarket.tsx  Plugins.tsx  Screenshot.tsx  Shortcuts.tsx  WebSearch.tsx  index.tsx
src/services/: tauri.ts
src/stores/: clipboard.spec.ts  clipboard.ts  plugins.spec.ts  plugins.ts  screenshot.ts  search.ts  settings.ts  theme.ts  ui.ts  workflow.spec.ts  workflow.ts
src/styles/: alfred-settings.css  clipboard.css  globals.css  settings.css  themes.css
src/types/: ai.ts  clipboard.ts  index.ts  plugin.ts  search.ts  settings.ts
src/utils/: platform.ts
src/windows/Capture/: AnnotationLayer.tsx  DrawManager.ts  KeyboardHandler.ts  Magnifier.tsx  MosaicTool.ts  OCRResult.tsx  ToolBar.tsx
