[package]
name = "omnibox"
version = "0.1.0"
description = "Cross-platform productivity launcher and tool"
authors = ["ntruth"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
serde_yaml = "0.9"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
urlencoding = "2.1"
meval = "0.2"
notify = "6.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
