[package]
name = "omnibox"
version = "0.1.0"
description = "Cross-platform productivity launcher and tool"
authors = ["ntruth"]
edition = "2021"

[package.metadata]
[package.metadata.tauri]
config = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"

# DLL loading for Everything integration
libloading = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Capture & image processing
xcap = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
arboard = "3"

# Windows UI Automation (for auto-detect UI elements)
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_System_Ole",
	"Win32_UI_Accessibility",

	# WinRT OCR (Windows 10/11 native)
	"Foundation",
	"Foundation_Collections",
	"Globalization",
	"Graphics_Imaging",
	"Media_Ocr",
	"Storage_Streams",
] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async utilities
async-trait = "0.1"
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
serde_yaml = "0.9"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
meval = "0.2"
notify = "6.1"
base64 = "0.21"
md5 = "0.7"
regex = "1.10"
zip = "0.6"

# Search & Indexing
walkdir = "2.4"
pinyin = "0.10"
fuzzy-matcher = "0.3"
parking_lot = "0.12"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
